--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   style:
     name: Check Style
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout
         uses: actions/checkout@v1
@@ -35,7 +35,7 @@ jobs:
   test:
     name: Test
     needs: [style]
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout
         uses: actions/checkout@v1
@@ -47,10 +47,9 @@ jobs:
           profile: minimal
           override: true
 
-      - name: Build debug
-        uses: actions-rs/cargo@v1
-        with:
-          command: build
+      - name: Build
+        shell: bash
+        run: "make"
 
       - name: Test
         shell: bash
@@ -60,7 +59,7 @@ jobs:
     name: deploy
     needs: [test]
     if: startsWith(github.ref, 'refs/tags/')
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     strategy: 
       matrix:
         target: [ aarch64-unknown-linux-gnu, armv7-unknown-linux-gnueabihf, i686-unknown-linux-gnu, i686-unknown-linux-musl, powerpc64-unknown-linux-gnu, powerpc64le-unknown-linux-gnu, arm-unknown-linux-gnueabi, x86_64-unknown-linux-gnu, x86_64-unknown-linux-musl ]
