--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "authorized-keys-github"
-version = "0.1.0"
-authors = ["Keno Fischer <keno@juliacomputing.com>"]
+version = "0.0.5"
+authors = ["Keno Fischer <keno@juliahub.com>", "Elliot Saba <elliot.saba@juliahub.com>"]
 edition = "2018"
 
 [dependencies]
